Funções de Horario
funções de cadastrar, listar, obter, deletar e alterar de Horarios.
